# v2m-lab

./: .gitignore  2026-01-01.md  404.html  AGENTES.md  AGENTS (es).md  AGENTS.md  LEEME.md  README.md  actualizar documentacion.md  index.html  mkdocs.yml  objects.inv  sitemap.xml  voice2machine.code-workspace
adr/: index.html
api/: index.html
apps/daemon/backend/: AGENTS.md  README.md  pyproject.toml
apps/daemon/backend/docs/: mkdocs.yml
apps/daemon/backend/docs/docs/es/: arquitectura.md  componentes_internos.md  desarrollo.md  gestion_demonio.md  index.md  referencia_api_ipc.md  testing.md
apps/daemon/backend/scripts/operations/client/: v2m-toggle.sh
apps/daemon/backend/scripts/operations/daemon/: start_daemon.sh
apps/daemon/backend/src/v2m/: __init__.py  api.py  config.py  daemon.py  main.py
apps/daemon/backend/src/v2m/application/: command_handlers.py  config_manager.py  llm_service.py  transcription_service.py
apps/daemon/backend/src/v2m/core/: interfaces.py  logging.py
apps/daemon/backend/src/v2m/domain/: audio_stream.py  errors.py  ports.py
apps/daemon/backend/src/v2m/infrastructure/: file_transcription_service.py  gemini_llm_service.py  linux_adapters.py  local_llm_service.py  notification_service.py  ollama_llm_service.py  persistent_model.py  rust_audio_adapter.py  streaming_transcriber.py  system_monitor.py  whisper_transcription_service.py
apps/daemon/backend/src/v2m/services/: __init__.py  orchestrator.py
apps/daemon/backend/src/voice2machine.egg-info/: SOURCES.txt
apps/daemon/backend/tests/unit/: test_streaming_transcriber.py
(+424 files in other folders)
