[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice2machine"
version = "0.2.0"
description = "Interfaz de Voz a Máquina de última generación (SOTA)"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "faster-whisper",
    "sounddevice",
    "numpy",
    # API Server (SOTA 2026 - reemplaza IPC manual)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    # Config & Validation
    "pydantic>=2.0",
    "pydantic-settings",
    # LLM Backends
    "google-genai",
    # Utils
    "pyyaml",
    "requests",
    "coloredlogs",
    "psutil",
    "uvloop",
    "aiofiles",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
# Habilitar reglas modernas de Python
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (actualizar sintaxis)
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # reglas específicas de ruff
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
